--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@supabase/supabase-js": "^2.81.1",
     "@tanstack/react-query": "^5.60.5",
     "@types/memoizee": "^0.4.12",
+    "@types/multer": "^2.0.0",
     "@vercel/node": "^5.5.6",
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.1",
@@ -59,6 +60,7 @@
     "lucide-react": "^0.453.0",
     "memoizee": "^0.4.17",
     "memorystore": "^1.6.7",
+    "multer": "^2.0.2",
     "next-themes": "^0.4.6",
     "openid-client": "^6.8.1",
     "passport": "^0.7.0",
