--- a/package.json
+++ b/package.json
@@ -46,15 +46,16 @@
     "@types/multer": "^2.0.0",
     "@vercel/node": "^5.5.6",
     "bcryptjs": "^2.4.3",
+    "busboy": "^1.6.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
+    "cookie-session": "^2.0.0",
     "date-fns": "^3.6.0",
     "dotenv": "^16.6.1",
     "embla-carousel-react": "^8.6.0",
     "express": "^4.21.2",
     "express-session": "^1.18.1",
-    "cookie-session": "^2.0.0",
     "framer-motion": "^11.13.1",
     "http-proxy-middleware": "^3.0.5",
     "input-otp": "^1.4.2",
@@ -89,9 +90,9 @@
     "@tailwindcss/typography": "^0.5.15",
     "@tailwindcss/vite": "^4.1.3",
     "@types/bcryptjs": "^2.4.6",
+    "@types/cookie-session": "^2.0.44",
     "@types/express": "4.17.21",
     "@types/express-session": "^1.18.0",
-    "@types/cookie-session": "^2.0.44",
     "@types/node": "20.16.11",
     "@types/passport": "^1.0.16",
     "@types/passport-local": "^1.0.38",
