--- a/package.json
+++ b/package.json
@@ -90,6 +90,7 @@
     "@tailwindcss/typography": "^0.5.15",
     "@tailwindcss/vite": "^4.1.3",
     "@types/bcryptjs": "^2.4.6",
+    "@types/busboy": "^1.5.4",
     "@types/cookie-session": "^2.0.44",
     "@types/express": "4.17.21",
     "@types/express-session": "^1.18.0",
